# cpp20-modules-example

./: .clangd  .gitignore  CMakeLists.txt  M2.cpp  M3.cpp  Makefile  README.md  lsphelper.h  main.cpp  main_person.cpp  person.cpp  person_function.cpp  person_module.cpp
person/: module.cppm  person.cpp  person_function.cpp
